- refactor : jwt 방식으로 변경 중

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,5 @@ spring.h2.console.enabled=true
 spring.datasource.jpa.spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.datasource.jpa.hibernate.ddl-auto=none
 spring.datasource.jpa.show-sql=true
+
+security.oauth2.jwt.sign.key= mid@swebsolution
