- feat : jwt 암복호화 RSA 공개키, 개인키로 변경

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,4 +11,9 @@ spring.datasource.jpa.spring.jpa.database-platform=org.hibernate.dialect.H2Diale
 spring.datasource.jpa.hibernate.ddl-auto=none
 spring.datasource.jpa.show-sql=true
 
-security.oauth2.jwt.sign.key= mid@swebsolution
+security.oauth2.jwt.alias=server_private
+security.oauth2.jwt.code=mid@sit
+security.oauth2.jwt.expired=1
+
+security.oauth2.jwt.public=/publicKey.txt
+security.oauth2.jwt.private=/server.jks
