--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,7 @@ dependencies {
     implementation 'org.glassfish.jaxb:jaxb-runtime:2.3.2'
 
     implementation 'org.apache.commons:commons-lang3'
+    implementation 'org.apache.commons:commons-io:1.3.2'
 
     implementation 'com.h2database:h2'
 
