- feat : webflux 방식으로 응답 객체 변경 및 spring boot 버전 대응

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,7 +7,7 @@ eureka:
 ################## Application Settings ####################
 spring:
   application:
-    name: Sso Auth Server
+    name: SSO-AUTH-SERVER
 
   datasource:
     jdbc-url: jdbc:h2:mem:testdb
@@ -36,3 +36,5 @@ spring:
 
 server:
   port: ${PORT:9000}
+  servlet:
+    context-path: /auth
