- feat : discovery 고가용성 처리

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:8080/eureka/
+      defaultZone: http://localhost:3001/eureka/, http://localhost:3002/eureka/, http://localhost:3003/eureka/
 
 ################## Application Settings ####################
 spring:
