--- a/build.gradle
+++ b/build.gradle
@@ -29,24 +29,23 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
+    implementation 'org.springframework.cloud:spring-cloud-config-client'
+    implementation 'org.springframework.cloud:spring-cloud-starter-bus-amqp'
 
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
 
     implementation 'org.springframework.session:spring-session-data-redis'
 
-    implementation 'io.springfox:springfox-swagger2:2.9.2';
-    implementation 'io.springfox:springfox-swagger-ui:2.9.2';
+    implementation 'org.springdoc:springdoc-openapi-ui:1.6.9'
 
     implementation 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
-    annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
 
     implementation 'javax.validation:validation-api'
-
-    implementation 'org.springframework.boot:spring-boot-configuration-processor'
 
     implementation 'javax.xml.bind:jaxb-api'
     implementation 'org.glassfish.jaxb:jaxb-runtime:2.3.2'
