--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,5 +6,5 @@ spring:
     import: "optional:configserver:http://localhost:8091"
   cloud:
     config:
-      name: sso
+      name: sso,eureka,cloud-bus,springdoc
       profile: local
