- feat : docker-compose 설정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,24 @@
 server:
   port: ${PORT:9000}
 
+---
 spring:
   config:
+    activate:
+      on-profile: local
     import: "optional:configserver:http://localhost:8091"
   cloud:
     config:
-      name: sso,eureka,cloud-bus,springdoc
+      name: sso,eureka,cloud-bus,springdoc,redis
       profile: local
+
+---
+spring:
+  config:
+    activate:
+      on-profile: docker
+    import: "optional:configserver:http://config-server:8091"
+  cloud:
+    config:
+      name: sso,eureka,cloud-bus,springdoc,redis
+      profile: docker
